# citro3d-rs-2021

./: Cargo.toml  README.md
citro-3d/: Cargo.toml  build.rs
citro-3d-sys/: Cargo.toml  bindgen.sh  build.rs
citro-3d-sys/src/: bindings.rs  lib.rs
citro-3d/src/: inlines.rs  lib.rs  macros.rs  vertex.rs
src/: lib.rs
