[package]
name = "pica-gl"
version = "0.1.0"
authors = ["Vivian Lim <rust@vvn.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctru-rs = { path = "/home/vivlim/git/ctru-rs/ctru-rs" }
ctru-sys = { path = "/home/vivlim/git/ctru-rs/ctru-sys" }
pica-gl-sys = { path = "/home/vivlim/git/picaGL-sys" }

#gfx-backend-gl = { path = "/home/vivlim/git/gfx/src/backend/gl" }
glow = { path = "/home/vivlim/git/glow" }