[package]
name = "citro-3d"
version = "0.1.0"
authors = ["Vivian Lim <rust@vvn.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctru-rs = { path = "/home/vivlim/git/ctru-rs/ctru-rs" }
ctru-sys = { path = "/home/vivlim/git/ctru-rs/ctru-sys" }
citro-3d-sys = { path = "/home/vivlim/git/citro-3d-sys" }

[build-dependencies]
failure = "0.1.8"